--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,8 +38,8 @@
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
+          <span class="credits left">Homepage of <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
+          <span class="credits right">LinkedIn: <a href="{{ site.linkedin_url }}">{{ site.linkedin_handle }}</a></span>
         </div>
 
         {{ content }}
